--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -3,14 +3,14 @@
 
 	<parent>
 		<groupId>org.openmrs.module</groupId>
-		<artifactId>kenyaui</artifactId>
-		<version>2.1-SNAPSHOT</version>
+		<artifactId>kpui</artifactId>
+		<version>2.2-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>kenyaui-omod</artifactId>
+	<artifactId>kpui-omod</artifactId>
 	<packaging>jar</packaging>
-	<name>KenyaUI Library OMOD</name>
-	<description>OMOD project for KenyaUI Library</description>
+	<name>KPUI Library OMOD</name>
+	<description>OMOD project for KPUI Library</description>
 
 	<dependencies>
 		<dependency>
