--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.openmrs.module</groupId>
-	<artifactId>kenyaui</artifactId>
-	<version>2.1-SNAPSHOT</version>
+	<artifactId>kpui</artifactId>
+	<version>2.2-SNAPSHOT</version>
 
 	<packaging>pom</packaging>
-	<name>KenyaUI</name>
+	<name>KPUI</name>
 	<description>Re-usable UI components for KenyaEMR</description>
 
 	<organization>
@@ -15,9 +15,9 @@
 	</organization>
 
 	<scm>
-		<connection>scm:git:git@github.com:I-TECH/openmrs-module-kenyaui.git</connection>
-		<developerConnection>scm:git:git@github.com:I-TECH/openmrs-module-kenyaui.git</developerConnection>
-		<url>scm:git:git@github.com:I-TECH/openmrs-module-kenyaui.git</url>
+		<connection>scm:git:git@github.com:I-TECH/openmrs-module-kpui.git</connection>
+		<developerConnection>scm:git:git@github.com:I-TECH/openmrs-module-kpui.git</developerConnection>
+		<url>scm:git:git@github.com:I-TECH/openmrs-module-kpui.git</url>
 		<tag>HEAD</tag>
 	</scm>
 
